# AGAIN

./: .gitignore  AGENTS.md  README.md  iniciar_proyecto.bat  instalar_torch_cuda.bat  preparar_modelo.bat  pyproject.toml  requirements-torch-cu128.txt  requirements.txt  sitecustomize.py  start_training.py  tmp_benchmark_pdf_extract.txt
.matplotlib-cache/: fontlist-v390.json
again_benchmark/: __init__.py  comparison.py  config.py  contracts.py  definitions.py  errors.py  manifests.py  metrics.py  reports.py  runner.py  snapshots.py  storage.py  ui_adapter.py  validation.py
again_econ/: README.md  __init__.py  config.py  contracts.py  errors.py  execution.py  fingerprints.py  manifest.py  metrics.py  parity.py  providers.py  reports.py  runner.py  runtime.py  signals.py  storage.py  ui_adapter.py  validation.py  walkforward.py
app/: app.py  backtest_market_builder.py  backtest_service.py  benchmark_store.py  benchmark_utils.py  config_loader.py  maintenance_service.py  plot_utils.py  services.py
config/: benchmark_tickers.yaml  config.yaml  model_registry.yaml  tickers_with_names.yaml  training_universes.yaml
models/: Gen4_3x.pth.sha256  Gen6_1.pth.sha256  Gen6_1__group__bbva_peer_banks_best.pth.meta.json  Gen6_1__group__bbva_peer_banks_best.pth.sha256  Gen6_1__group__bbva_peer_banks_last.pth.meta.json  Gen6_1__group__bbva_peer_banks_last.pth.sha256  Gen6_1__single__BBVA_MC_best.pth.meta.json  Gen6_1__single__BBVA_MC_best.pth.sha256  Gen6_1__single__BBVA_MC_last.pth.sha256  Gen6_1_best.pth.meta.json  Gen6_1_best.pth.sha256  Gen6_1_last.pth.sha256
(+176 files in other folders)
