[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "predictor-bursatil-tft"
version = "0.1.0"
description = "Pipeline reproducible de forecasting bursatil con TFT"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
  { name = "RivorX" }
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["again_benchmark*", "again_econ*", "app*", "scripts*", "tests*"]

[tool.setuptools.package-data]
app = ["*.py"]
scripts = ["*.py"]

[tool.pytest.ini_options]
testpaths = [
  "tests/app",
  "tests/again_benchmark",
  "tests/again_econ",
  "tests/integration",
  "tests/scripts",
]
python_files = ["test_*.py"]
addopts = "-p no:cacheprovider"
norecursedirs = [".venv", "var", "artifacts"]

